# eztcp

./: Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h  config.h.in~  config.status  configure  configure.ac  libtool
autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
src/: .libeztcp-client.c.swp  .libeztcp-server.c.swp  Makefile  Makefile.am  Makefile.in  eztcp-client-test.c  eztcp-client-test.pc.in  eztcp-client.h  eztcp-server-test.c  eztcp-server-test.pc.in  eztcp-server.h  eztcp.h  eztcp_client_test_config  eztcp_server_test_config  libeztcp-client.c  libeztcp-client.la  libeztcp-client.lo  libeztcp-client.pc.in  libeztcp-server.c  libeztcp-server.la  libeztcp-server.lo  libeztcp-server.pc.in  libeztcp_server_config
src/.deps/: libeztcp-client.Plo  libeztcp-server.Plo
src/.libs/: libeztcp-client.la  libeztcp-client.lai  libeztcp-client.so.0  libeztcp-client.so.0.0.0  libeztcp-server.la  libeztcp-server.lai  libeztcp-server.so.0.0.0
